Always apply UniformMatrix4fvStreamTextureMatrixCHROMIUM matrix argument.

Regardless of whether we have a stream texture matrix, we should apply
the transformation matrix held by the StreamTextureDrawQuad instance.

Change the implementation of the extension to always premultiply either
the stream texture matrix or the identity matrix by the passed
transformation matrix.

BUG=597681
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel

Committed: https://crrev.com/694a2495f993ea2d3f680c93cec097ce5d9ec978 [formerly 5897d75b89294c388df2ec16b7519ecd635cc148]
Review-Url: https://codereview.chromium.org/1818073002
Cr-Original-Commit-Position: refs/heads/master@{#405507}
Cr-Commit-Position: refs/heads/master@{#409543}

Former-commit-id: fc9d613c03b8e72ddfbc9f43d87119d29f96fdee