gpu/command_buffer/service/gles2_cmd_decoder_passthrough_handlers_autogen.cc
@@ -4502,10 +4502,10 @@ error::Error GLES2DecoderPassthroughImpl::
   if (data_size > immediate_data_size) {
     return error::kOutOfBounds;
   }
-  const GLfloat* default_value =
+  const GLfloat* transform =
       GetImmediateDataAs<const GLfloat*>(c, data_size, immediate_data_size);
   error::Error error = DoUniformMatrix4fvStreamTextureMatrixCHROMIUM(
-      location, transpose, default_value);
+      location, transpose, transform);
   if (error != error::kNoError) {
     return error;
   }
